@startuml
class TodoForm {
    +explicit TodoForm(QWidget *parent = nullptr)
    +~TodoForm()
    +void setUser(const User &user)
    +QToolButton *getBtn1()
    +QToolButton *getBtn2()
    +QLabel *getHint()
    +QLabel *getUinfo()
    -Ui::TodoForm *ui
}
class TodoFormBuilder {
    +TodoFormBuilder()
    +{abstract} void buildUserInfo(const User &user)
    +{abstract} void buildBtn1()
    +{abstract} void buildBtn2()
    +TodoForm *createTodoForm()
    #TodoForm *userTodoForm
}
class BuyerTodoBuilder {
    +void buildUserInfo(const User &user)
    +void buildBtn1()
    +void buildBtn2()
}
class SellerTodoBuilder {
    +void buildUserInfo(const User &user)
    + void buildBtn1()
    + void buildBtn2()
}
class AdminTodoBuilder  {
    +void buildUserInfo(const User &user)
    +void buildBtn1()
    +void buildBtn2()
}
class TodoFormController {
    +TodoForm *createUserTodoForm(TodoFormBuilder *todoBuilder, const User &user)
}
TodoForm --|> QWidget
TodoFormBuilder<|--BuyerTodoBuilder
TodoFormBuilder<|--SellerTodoBuilder
TodoFormBuilder <|--AdminTodoBuilder
TodoFormController o--> TodoFormBuilder 

BuyerTodoBuilder --> TodoForm
SellerTodoBuilder --> TodoForm
AdminTodoBuilder --> TodoForm

@enduml